<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:title="@string/dream_interactive"
        android:key="pref_dream_interactive"
        android:defaultValue="false"
        android:summaryOn="@string/dream_interactive_on"
        android:summaryOff="@string/dream_interactive_off"/>
    <CheckBoxPreference
        android:title="@string/dream_brightness"
        android:key="pref_dream_brightness"
        android:summary="@string/dream_brightness_summary"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:title="@string/dream_clock"
        android:key="pref_dream_overlay"
        android:summary="@string/dream_clock_summary"
        android:defaultValue="false"
        android:disableDependentsState="false"/>
    <ListPreference
        android:entries="@array/dream_clock_position_list"
        android:title="@string/dream_clock_position"
        android:key="pref_dream_overlay_position"
        android:summary="@string/dream_clock_position_summary"
        android:dependency="pref_dream_overlay"
        android:defaultValue="@string/dream_clock_position_default"
        android:entryValues="@array/dream_clock_position_values"/>
    <ListPreference
        android:entries="@array/dream_clock_size_list"
        android:title="@string/dream_clock_size"
        android:key="pref_dream_overlay_size"
        android:summary="@string/dream_clock_size_summary"
        android:dependency="pref_dream_overlay"
        android:defaultValue="@string/dream_clock_size_default"
        android:entryValues="@array/dream_clock_size_values"/>
    <PreferenceScreen
        android:title="@string/dream_wallpaper_settings_title"
        android:key="@string/dream_wallpaper_settings_key"
        android:summary="@string/dream_wallpaper_settings_summary"/>
</PreferenceScreen>
