<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res/com.dualboot.apps.beach"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/spacing"
    android:layout_marginRight="@dimen/spacing">
    <com.dualboot.widget.TextViewHeaderImg
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/WhatsNew_Title_Default"
        app:img_bitmap_src="@drawable/thumb"
        app:img_bitmap_src_override="@drawable/thumb_header"
        style="@style/DualBoot.Style.Text.Header.Img"/>
    <LinearLayout
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/rounded_rect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing.small">
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/rounded_rect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing.small"
            android:text="@string/whatsnew_iday_new_features"
            style="@style/DualBoot.Style.Text.Header"/>
        <TextView
            android:padding="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing.small"
            android:text="@string/whatsnew_iday_new_features_summary"
            style="@style/DualBoot.Style.Text.Small"/>
        <com.dualboot.widget.TextViewHeaderImg
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:text="@string/whatsnew_iday_feature_independence"
            app:img_bitmap_src="@drawable/wn_independence"
            style="@style/DualBoot.Style.Text.Small.Img"/>
        <com.dualboot.widget.TextViewThemeLink
            android:textStyle="italic"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing.small"
            android:minHeight="36dp"
            android:text="@string/whatsnew_iday_theme_set_independence"
            app:use_link_color="false"
            app:theme_name="@string/whatsnew_iday_theme_id_independence"
            style="?android:attr/buttonStyleSmall"/>
        <com.dualboot.widget.TextViewHeaderImg
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing.small"
            android:text="@string/whatsnew_iday_feature_fireworksatnight"
            app:img_bitmap_src="@drawable/wn_fireworksatnight"
            style="@style/DualBoot.Style.Text.Small.Img"/>
        <com.dualboot.widget.TextViewThemeLink
            android:textStyle="italic"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing.small"
            android:minHeight="36dp"
            android:text="@string/whatsnew_iday_theme_set_fireworksatnight"
            app:use_link_color="false"
            app:theme_name="@string/whatsnew_iday_theme_id_fireworksatnight"
            style="?android:attr/buttonStyleSmall"/>
        <LinearLayout
            android:gravity="top"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing.small"
            android:layout_marginBottom="@dimen/spacing.small"
            android:weightSum="1">
            <com.dualboot.widget.TextViewHeaderImg
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/spacing.small"
                android:text="@string/whatsnew_iday_feature_cruiseship"
                android:layout_weight="0.5"
                app:img_bitmap_src="@drawable/wn_cruiseship"
                style="@style/DualBoot.Style.Text.Small.Img"/>
            <com.dualboot.widget.TextViewHeaderImg
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing.small"
                android:text="@string/whatsnew_iday_feature_seagull"
                android:layout_weight="0.5"
                app:img_bitmap_src="@drawable/wn_seagull"
                style="@style/DualBoot.Style.Text.Small.Img"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="top"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing.small"
            android:layout_marginBottom="@dimen/spacing.small"
            android:weightSum="1">
            <com.dualboot.widget.TextViewHeaderImg
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/spacing.small"
                android:text="@string/whatsnew_iday_feature_orange"
                android:layout_weight="0.5"
                app:img_bitmap_src="@drawable/wn_orange"
                style="@style/DualBoot.Style.Text.Small.Img"/>
            <com.dualboot.widget.TextViewHeaderImg
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing.small"
                android:text="@string/whatsnew_iday_feature_sign"
                android:layout_weight="0.5"
                app:img_bitmap_src="@drawable/wn_sign"
                style="@style/DualBoot.Style.Text.Small.Img"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
