<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/DualBoot.Style.Layout.Vertical">
    <LinearLayout
        android:id="@+id/payment_bar"
        android:background="?attr/clickableItemBackground"
        android:paddingTop="@dimen/spacing.small"
        android:paddingBottom="@dimen/spacing.small"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        style="@style/DualBoot.Style.Layout.Horizontal">
        <ImageView
            android:id="@+id/payment_icon"
            android:padding="@dimen/spacing"
            android:src="@drawable/icon_googleplay"
            android:scaleType="fitCenter"
            style="@style/DualBoot.Style"/>
        <LinearLayout
            android:gravity="center"
            android:paddingLeft="@dimen/spacing.small"
            android:paddingRight="@dimen/spacing.small"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/DualBoot.Style.Layout.Vertical">
            <TextView
                android:id="@+id/payment_type"
                android:padding="0dp"
                android:text="@string/payment_type"
                style="@style/DualBoot.Style.Text.Primary"/>
            <TextView
                android:id="@+id/payment_desc"
                android:padding="0dp"
                android:text="@string/payment_desc"
                style="@style/DualBoot.Style.Text.Small"/>
        </LinearLayout>
        <TextView
            android:gravity="center"
            android:id="@+id/payment_price"
            android:padding="@dimen/spacing"
            android:text="@string/payment_price"
            style="@style/DualBoot.Style.Text.Primary"/>
    </LinearLayout>
    <View
        android:background="?android:attr/listDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</LinearLayout>
